[gd_scene load_steps=5 format=3 uid="uid://k6ir27au063k"]

[ext_resource type="Script" path="res://levels/view/main_menu.gd" id="1_a7cvq"]
[ext_resource type="Shader" path="res://levels/view/pause_menu.gdshader" id="1_o3grq"]
[ext_resource type="Texture2D" uid="uid://c05qrq0eujf7f" path="res://background-menu.jpg" id="2_kk26o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vrr5k"]
shader = ExtResource("1_o3grq")
shader_parameter/amount = 0.64

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 112.0
offset_top = 56.0
offset_right = 112.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a7cvq")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -111.0
offset_top = -57.0
offset_right = 969.0
offset_bottom = 546.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_kk26o")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_vrr5k")
layout_mode = 0
offset_right = 93.0
offset_bottom = 64.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="New Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Novo jogo"

[node name="Load" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Carregar Jogo"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Sair do jogo
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/New Game" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
